@@ -1,0 +1,120 @@
+/* XPM */
+static const char * report_xpm[] = {
+"16 16 101 2",
+"  	c #000000",
+". 	c #F0ECCB",
+"+ 	c #FBE73B",
+"@ 	c #F2B64D",
+"# 	c #D2C26A",
+"$ 	c #D3C36B",
+"% 	c #D4C46C",
+"& 	c #D6C66E",
+"* 	c #D7C76F",
+"= 	c #D9C971",
+"- 	c #DACA70",
+"; 	c #DBCB73",
+"> 	c #DDCD73",
+", 	c #FCEB3D",
+"' 	c #F7B544",
+") 	c #665931",
+"! 	c #D8C870",
+"~ 	c #D9C96F",
+"{ 	c #FCE93B",
+"] 	c #F7B545",
+"^ 	c #6C5F34",
+"/ 	c #D6C66C",
+"( 	c #D7C76D",
+"_ 	c #D8C86E",
+": 	c #DBCB71",
+"< 	c #DBCE73",
+"[ 	c #F9DF39",
+"} 	c #F4B244",
+"| 	c #6A5F36",
+"1 	c #BAAF65",
+"2 	c #DCCE72",
+"3 	c #DDCD75",
+"4 	c #F6D236",
+"5 	c #EFB44D",
+"6 	c #5C4F2B",
+"7 	c #E3D67B",
+"8 	c #DACD77",
+"9 	c #DFCF75",
+"0 	c #D7AE74",
+"a 	c #655930",
+"b 	c #E4D77C",
+"c 	c #DBCE77",
+"d 	c #4F4115",
+"e 	c #E5D87D",
+"f 	c #E6D97E",
+"g 	c #DCCF74",
+"h 	c #DECE74",
+"i 	c #E0D276",
+"j 	c #E7D97F",
+"k 	c #DBD079",
+"l 	c #E1D377",
+"m 	c #E2D478",
+"n 	c #DED074",
+"o 	c #DFD277",
+"p 	c #E2D57A",
+"q 	c #E3D579",
+"r 	c #E7DA7F",
+"s 	c #E8DB80",
+"t 	c #DCD079",
+"u 	c #DED176",
+"v 	c #E1D479",
+"w 	c #E6D87C",
+"x 	c #E9DC81",
+"y 	c #DCD17A",
+"z 	c #F1EDCD",
+"A 	c #EFE9C0",
+"B 	c #F0EAC1",
+"C 	c #ECE5B1",
+"D 	c #ECE6B2",
+"E 	c #E9E19E",
+"F 	c #EAE2A0",
+"G 	c #EBE3A8",
+"H 	c #ECE3A9",
+"I 	c #EDE4AA",
+"J 	c #EDE6AB",
+"K 	c #E5DEA0",
+"L 	c #A69D59",
+"M 	c #A79E5A",
+"N 	c #A89F5A",
+"O 	c #A9A05A",
+"P 	c #A9A05B",
+"Q 	c #AAA15C",
+"R 	c #ACA25D",
+"S 	c #ACA45E",
+"T 	c #ADA35F",
+"U 	c #AEA560",
+"V 	c #B0A561",
+"W 	c #B0A661",
+"X 	c #BEB366",
+"Y 	c #BFB466",
+"Z 	c #C0B567",
+"` 	c #C1B667",
+" .	c #C2B869",
+"..	c #C3B86A",
+"+.	c #C3BA6B",
+"@.	c #C4BB6C",
+"#.	c #C5BA6E",
+"$.	c #C5BC6E",
+"%.	c #C8BF6F",
+"&.	c #C7BE70",
+"*.	c #BBB168",
+"                                ",
+"  . . . . . . . . . . .   + @   ",
+"  . # $ % & * = - ; >   , ' )   ",
+"  . $ % & ! ~ - ; >   { ] ^     ",
+"  . / ( _ ~ : < >   [ } |   1   ",
+"  . ( _ = : 2 3   4 5 6   7 8   ",
+"  . ! = : 2 3 9   0 a   b b c   ",
+"  . = : 2 3 9   d     b e f c   ",
+"  . ; g h 9 i     7 b e f j k   ",
+"  . ; g h 9 i l m 7 b e f j k   ",
+"  . g n o i l p q b e f r s t   ",
+"  . u o i v p 7 b w f j s x y   ",
+"  . z A B C D E F G G H I J K   ",
+"  L M N O P Q R R S T U U V W   ",
+"  X Y Z `  .....+.@.#.$.%.&.*.  ",
+"                                "};
