@@ -1100,3 +1100,5 @@
 	* Added an icons for Networks in 'icons/network.xpm'.
 	* Added an icons for Providers in 'icons/provider.xpm'.
 	* Added an icons for Programs in 'icons/program.xpm'.
+2025-09-03 Fred Gleason <fredg@paravelsystems.com>
+	* Added an icons for Reports in 'icons/report.xpm'.
